--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="category_notes">Notes</string>
     <string name="category_exams">Exams</string>
     <string name="category_semesters">Semesters</string>
+    <string name="category_holidays">Holidays</string>
     <string name="category_search">Search</string>
     <string name="category_setting">Settings</string>
     <string name="category_people">People</string>
