--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,13 @@
     <string name="BR_YER_003">Can\'t add academic year with period more than 400 days</string>
 
 
+    ضيف الي عليهم خطأ
+    وخلينا نشوف
+
+
+    <string name="login_loading">Loading</string>
+    <string name="login_title">LOGIN</string>
+    <string name="login_username">Username</string>
+    <string name="login_pass">Password</string>
+
 </resources>
