--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,9 +57,13 @@
     <string name="exam_end_date_hint">End Date Time</string>
 
         <!-- Semester  -->
-        <string name="semester_name">Semester Name</string>
+    <string name="semester_name">Semester Name</string>
     <string name="semester_start_date_hint">Start Date</string>
     <string name="semester_end_date_hint">End Date</string>
+    <string name="semester_select_year_hint">Select Year</string>
+    <string name="semester_add_subtitle">Add Semester</string>
+    <string name="semester_edit_subtitle">Edit Semester</string>
+    <string name="semester_add_successfully">Successfully add semester</string>
     <!-- /ADD Edit  -->
 
     <!-- Tab  -->
